# pytgbot

./: README.md  doc_req.txt  pyproject.toml
.github/: ISSUE_TEMPLATE
pytgbot/: __init__.py  apihelper.py  async_pytgbot.py  asyncio_filters.py  asyncio_handler_backends.py  asyncio_helper.py  callback_data.py  custom_filters.py  handler_backends.py  types.py  util.py
pytgbot/asyncio_storage/: __init__.py  memory_storage.py  pickle_storage.py  redis_storage.py
pytgbot/ext/: reloader.py
pytgbot/ext/aio/: webhooks.py
pytgbot/ext/sync/: webhooks.py
pytgbot/states/: __init__.py
pytgbot/states/asyncio/: context.py  middleware.py
pytgbot/states/sync/: __init__.py  context.py  middleware.py
pytgbot/storage/: __init__.py  memory_storage.py  pickle_storage.py  redis_storage.py
tests/: test_handler_backends.py  test_types.py
