[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytgbot"
version = "0.0.1"
description = "Telegram python bot api."
authors = [{name = "TheHamkerGuy", email = "thehamkerguy@gmail.com"}]
license = {text = "GPL3"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["telegram", "bot", "api", "tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/TheHamkerGuy/pytgbot"
Documentation = "https://pytgbot.readthedocs.org"
Repository = "https://github.com/TheHamkerGuy/pytgbot"
Issues = "https://github.com/TheHamkerGuy/pytgbot/issues"


[project.optional-dependencies]
json = ["ujson"]
PIL = ["Pillow"]
redis = ["redis>=3.4.1"]
aiohttp = ["aiohttp"]
fastapi = ["fastapi"]
uvicorn = ["uvicorn"]
psutil = ["psutil"]
coloredlogs = ["coloredlogs"]
watchdog = ["watchdog"]


[tool.hatch.build.targets.wheel]
include = ["pytgbot/*"]
